# sd

./: Cargo.toml  README.md
.github/workflows/: test.yml
src/: cli.rs  error.rs  input.rs  main.rs  replacer.rs
tests/: cli.rs
