[package]
name = "sd"
version = "0.7.6"
edition = "2018"
authors = ["Gregory <gregory.mkv@gmail.com>"]
description = "An intuitive find & replace CLI"
readme = "README.md"
keywords = ["sed", "find", "replace", "regex"]
license = "MIT"
homepage = "https://github.com/osa1/sd"
repository = "https://github.com/osa1/sd.git"
categories = ["command-line-utilities", "text-processing", "development-tools"]

[dependencies]
regex = "1.4"
rayon = "1.5"
unescape = "0.1"
memmap2 = "0.5"
tempfile = "3.2"
thiserror = "1.0"
globwalk = "0.8"
ignore = "0.4"
ansi_term = "0.12"
clap = { version = "4.2", features = ["derive", "wrap_help"] }

[dev-dependencies]
assert_cmd = "1.0.3"
anyhow = "1.0.38"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
